--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,25 +39,25 @@
             </div> -->
             <div class="individual">
                 <h2>Holydigit101</h2>
-                <img src="" alt="photo">
+                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
                 <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
                 <button>View Project</button>
             </div>
             <div class="individual">
                 <h2>Holydigit101</h2>
-                <img src="" alt="photo">
+                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
                 <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
                 <button>View Project</button>
             </div>
             <div class="individual">
                 <h2>Holydigit101</h2>
-                <img src="" alt="photo">
+                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
                 <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
                 <button>View Project</button>
             </div>
             <div class="individual">
                 <h2>Holydigit101</h2>
-                <img src="" alt="photo">
+                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
                 <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
                 <button>View Project</button>
             </div>
