Added some CSS and Created a branch

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,31 +39,37 @@
             </div> -->
             <div class="individual">
                 <h2>Holydigit101</h2>
-                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
-                <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
-                <button>View Project</button>
+                <img src="./photos/WhatsApp Image 2025-10-25 at 17.35.17_863816b9.jpg" alt="photo">
+                <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities.</p>
+                <a href="https://holydigits101-brown.vercel.app/"><button>View Project</button></a>
             </div>
             <div class="individual">
-                <h2>Holydigit101</h2>
-                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
-                <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
-                <button>View Project</button>
+                <h2>Dodey Elite Travel & Tours</h2>
+                <img src="./photos/WhatsApp Image 2025-10-25 at 17.34.11_8abd08df.jpg" alt="photo">
+                <p>Still a Travel agency website which would have other features such as: Hotels, Cabs, e.t.c.</p>
+                <a href="https://dodey-et-t-git-main-odey-divines-projects.vercel.app/"><button>View Project</button></a>
             </div>
             <div class="individual">
-                <h2>Holydigit101</h2>
-                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
-                <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
-                <button>View Project</button>
+                <h2>GlobalTech Solution Compensation Analysis</h2>
+                <img src="./photos/Screenshot 2025-10-10 183526.png" alt="photo">
+                <p>Analysed the employees compensation and also analysed tenure across departments and locations.</p>
+                <a href="https://github.com/OdeyDivine/GlobalTech-Solutions"><button>View Project</button></a>
             </div>
             <div class="individual">
-                <h2>Holydigit101</h2>
-                <img src="./photos/Gemini_Generated_Image_bqlu83bqlu83bqlu.png" alt="photo">
-                <p>Developed the responsive, public-facing website for HolyDigit101, an edtech platform bridging Web2 schools to Web3 opportunities. Using HTML, CSS, and vanilla JavaScript, I built a clean, user-centered interface that clearly communicates the organization's complex mission and partnership vision.</p>
-                <button>View Project</button>
+                <h2>Super Store Sales Analysis</h2>
+                <img src="./photos/1753085154729.jpg" alt="photo">
+                <p>This project presents a comprehensive sales analysis of the "Super Store" using a dynamic and interactive dashboard built with Power BI.</p>
+                <a href="https://github.com/OdeyDivine/FUTURE_DS_01"><button>View Project</button></a>
             </div>
         </div>
         <section class="skills">
-
+            <i class="fa-brands fa-html5"></i>
+            <i class="fa-brands fa-css"></i>
+            <i class="fa-brands fa-js"></i>
+            <i class="fa-solid fa-database"></i>
+            <i class="fa-solid fa-file-excel"></i>
+            <i class="fa-brands fa-python"></i>
+            <i class="fa-brands fa-github"></i>
         </section>
     </section>
     <section class="contact">
@@ -72,16 +78,19 @@
             <input type="text" placeholder="enter your name" required>
             <input type="email" name="email" id="email" placeholder="enter your email" required>
             <input type="number" placeholder="enter your phone number">
-            <textarea name="message" id="message" cols="30" rows="20"></textarea>
-            
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <button type="submit">Submit</button>
         </form>
     </section>
     <footer>
         <div class="socials">
-
+            <a href="https://www.linkedin.com/in/odey-divine/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/web3_dm/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://x.com/web3_DM"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://github.com/OdeyDivine"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="message">
-
+            <p>Built with ❤️ & Code. &copy; 2025 DM Tech.</p>
         </div>
     </footer>
     <script src="script.js"></script>
